--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IB DataLink — Автоматизация</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/framer-motion@10.12.16/dist/framer-motion.umd.js"></script>
+  <script src="create-a-minimalistic--tech-style-logo-for--ib-dat.jpg"></script>
   <style>
     .fade-in {
       animation: fadeIn 1s ease-out;
