--- a/index.html
+++ b/index.html
@@ -3,53 +3,226 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IB DataLink — Автоматизация</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="create-a-minimalistic--tech-style-logo-for--ib-dat.jpg"></script>
+  <title>AI & Автоматизация</title>
   <style>
-    .fade-in {
-      animation: fadeIn 1s ease-out;
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+
+    body {
+      background: linear-gradient(135deg, #111827, #1f2937);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .header {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    .logo {
+      background: linear-gradient(135deg, #6366f1, #8b5cf6);
+      width: 70px;
+      height: 70px;
+      margin: 0 auto 15px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo svg {
+      width: 32px;
+      height: 32px;
+      stroke: white;
+    }
+
+    h1 {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    p.description {
+      color: #d1d5db;
+      font-size: 14px;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      text-decoration: none;
+      color: white;
+      font-weight: 600;
+      padding: 14px;
+      border-radius: 10px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .telegram { background: #3b82f6; }
+    .telegram:hover { background: #2563eb; }
+
+    .whatsapp { background: #22c55e; }
+    .whatsapp:hover { background: #16a34a; }
+
+    .portfolio { background: #374151; }
+    .portfolio:hover { background: #1f2937; }
+
+    .cta {
+      background: linear-gradient(to right, #ec4899, #f59e0b);
+      padding: 12px 20px;
+      border-radius: 9999px;
+      display: inline-block;
+      font-weight: bold;
+      animation: pulse 2s infinite;
+      text-decoration: none;
+      color: white;
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    section {
+      margin-top: 40px;
+    }
+
+    section h2 {
+      font-size: 20px;
+      margin-bottom: 15px;
+      border-left: 5px solid #6366f1;
+      padding-left: 10px;
+    }
+
+    .about p {
+      font-size: 14px;
+      color: #d1d5db;
+    }
+
+	.projects-gallery {
+	  display: grid;
+	  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+	  gap: 15px;
+	}
+    
+
+    .projects img {
+      width: 100%;
+      border-radius: 10px;
+      border: 2px solid #2d2d2d;
+    }
+
+    .services ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .services li {
+      background: #2c2c2c;
+      padding: 12px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      font-size: 14px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .footer {
+      text-align: center;
+      font-size: 12px;
+      color: #9ca3af;
+      margin: 40px 0 10px;
+    }
+
+    @media (max-width: 500px) {
+      h1 { font-size: 20px; }
+      .projects {
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+      }
     }
   </style>
 </head>
-<body class="bg-gradient-to-b from-white to-gray-100 text-gray-800 min-h-screen flex items-center justify-center">
-  <div class="max-w-md w-full px-6 py-10 text-center bg-white rounded-3xl shadow-2xl fade-in">
-    <!-- Логотип -->
-    <div class="mb-6">
-      <img src="https://via.placeholder.com/120x120.png?text=IB" alt="IB Logo" class="mx-auto w-24 h-24 rounded-2xl shadow-lg ring-2 ring-blue-500" />
+<body>
+
+  <div class="container">
+
+    <!-- Шапка -->
+    <div class="header">
+      <!-- Новое (твое лого) -->
+<div class="logo" style="padding: 0; background: none;">
+  <img src="logo.jpg" alt="Логотип" style="width: 70px; height: 70px; object-fit: contain; border-radius: 50%;" />
+</div>
+
+      <h1>AI-боты • Автоматизация • CRM</h1>
+      <p class="description">Создаём умных ассистентов, подключаем Telegram и WhatsApp, Google Sheets, Altegio, AmoCRM и многое другое.</p>
     </div>
 
-    <!-- Название и описание -->
-    <h1 class="text-3xl font-extrabold text-gray-900 mb-2 tracking-tight">IB DataLink</h1>
-    <p class="text-base text-gray-600 mb-6 leading-relaxed">Автоматизация бизнес-процессов · Интеграции · Боты · Финансовые дашборды</p>
+ <!-- О нас -->
+    <section class="about">
+      <h2>О нас</h2>
+      <p>Мы — команда разработчиков, автоматизирующая бизнес-процессы с помощью ИИ и чат-ботов. Более 5 лет опыта, десятки интеграций: от CRM до платёжных систем.</p>
+    </section>
 
+	<!-- Примеры работ -->
+	<section class="projects">
+	  <h2>Примеры работ</h2>
+	  <div class="projects-gallery">
+	    <img src="12.jpg" alt="Пример 1">
+	    <img src="13.jpg" alt="Пример 2">
+	    <img src="14.jpg" alt="Пример 3">
+	  </div>
+	</section>
+    
+
+ <!-- О нас -->
+    <section class="about">
+      <h2>Протестируйте бота и финансовый блок</h2>
+      <p>Мы предлагаем вам протестировать нашего чат-бота и встроенный финансовый дашборд прямо сейчас:</p><br>
+	  <ol>
+	      <li>Перейдите в тестовый дашборд: нажмите кнопку ниже и откройте.</li>
+		   <a href="https://t.me/your_bot" class="cta" target="_blank">Дашборд</a>
+	      <li>Перейдите в Telegram: нажмите кнопку ниже и откройте бота.</li>
+	   <a href="https://t.me/your_bot" class="cta" target="_blank">Telegram</a>
+	      <li>Оцените фин. блок: посмотрите, как фиксируются заявки, расходы, доход и графики.</li>
+	    </ol>
+    </section>
+
+    <!-- Услуги и цены -->
+    <section class="services">
+      <h2>Услуги и цены</h2>
+      <ul>
+        <li><span>Telegram-бот под ключ</span><span>от 50 000₸</span></li>
+        <li><span>WhatsApp-бот с рассылкой</span><span>от 60 000₸</span></li>
+        <li><span>CRM + Google Sheets интеграция</span><span>от 40 000₸</span></li>
+        <li><span>AI-бот (ChatGPT/Claude)</span><span>от 70 000₸</span></li>
+      </ul>
+    </section>
+<br>
+<br>
     <!-- Кнопки -->
-    <div class="space-y-3 text-left">
-      <a href="https://t.me/your_bot" target="_blank" class="block w-full py-3 px-5 rounded-xl text-white bg-blue-600 hover:bg-blue-700 transition shadow-md font-medium">
-        🤖 Оставить заявку на автоматизацию
-      </a>
-      <a href="https://yourdomain.kz/demo" target="_blank" class="block w-full py-3 px-5 rounded-xl text-white bg-green-500 hover:bg-green-600 transition shadow-md font-medium">
-        📊 Демо: Финансовый дашборд
-      </a>
-      <a href="https://yourdomain.kz/portfolio" target="_blank" class="block w-full py-3 px-5 rounded-xl text-white bg-indigo-500 hover:bg-indigo-600 transition shadow-md font-medium">
-        📁 Примеры интеграций и кейсы
-      </a>
-      <a href="https://wa.me/77001234567" target="_blank" class="block w-full py-3 px-5 rounded-xl text-white bg-emerald-500 hover:bg-emerald-600 transition shadow-md font-medium">
-        💬 WhatsApp для связи
-      </a>
-      <a href="https://yourdomain.kz/services" target="_blank" class="block w-full py-3 px-5 rounded-xl text-white bg-yellow-500 hover:bg-yellow-600 transition shadow-md font-medium">
-        🧰 Всё, с чем мы работаем
-      </a>
-    </div>
+   
+    <a href="https://t.me/your_bot" class="cta" target="_blank">🚀 Заказать бота</a>
+
+   
 
     <!-- Подвал -->
-    <div class="text-sm text-gray-400 mt-8">
-      © 2025 IB DataLink. Все права защищены.
-    </div>
+    <div class="footer">© 2025 AI Automation Lab. Все права защищены.</div>
+
   </div>
 </body>
 </html>
