--- a/index.html
+++ b/index.html
@@ -149,12 +149,13 @@
       margin: 40px 0 10px;
     }
 
-    @media (max-width: 500px) {
-      h1 { font-size: 20px; }
-      .projects {
-        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-      }
-    }
+ @media (max-width: 500px) {
+  h1 { font-size: 20px; }
+  .projects-gallery {
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  }
+}
+
   </style>
 </head>
 <body>
