--- a/index.html
+++ b/index.html
@@ -193,13 +193,12 @@
     <section class="about">
       <h2>Протестируйте бота и финансовый блок</h2>
       <p>Мы предлагаем вам протестировать нашего чат-бота и встроенный финансовый дашборд прямо сейчас:</p><br>
-      <ol>
-        <li>Перейдите в тестовый дашборд: нажмите кнопку ниже и откройте.</li>
+     
+        <p>1. Перейдите в тестовый дашборд: нажмите кнопку ниже и откройте.</p>
         <a href="https://t.me/your_bot" class="cta" target="_blank">Дашборд</a>
-        <li>Перейдите в Telegram: нажмите кнопку ниже и откройте бота.</li>
+        <p>2. Перейдите в Telegram: нажмите кнопку ниже и откройте бота.</p>
         <a href="https://t.me/your_bot" class="cta" target="_blank">Telegram</a>
-        <li>Оцените фин. блок: посмотрите, как фиксируются заявки, расходы, доход и графики.</li>
-      </ol>
+        <p>3. Оцените фин. блок: посмотрите, как фиксируются заявки, расходы, доход и графики.</p>
     </section>
 
     <!-- Услуги -->
