--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
       border-radius: 10px;
       border: 2px solid #2d2d2d;
       display: block;
+      transition: all 0.3s ease;
+      cursor: pointer;
+    }
+
+    .projects-gallery img:hover,
+    .projects-gallery img:active {
+      transform: scale(1.5);
+      z-index: 10;
     }
 
     .services ul {
@@ -193,12 +201,12 @@
     <section class="about">
       <h2>Протестируйте бота и финансовый блок</h2>
       <p>Мы предлагаем вам протестировать нашего чат-бота и встроенный финансовый дашборд прямо сейчас:</p><br>
-     
-        <p>1. Перейдите в тестовый дашборд: нажмите кнопку ниже и откройте.</p>
-        <a href="https://t.me/your_bot" class="cta" target="_blank">Дашборд</a>
-        <p>2. Перейдите в Telegram: нажмите кнопку ниже и откройте бота.</p>
-        <a href="https://t.me/your_bot" class="cta" target="_blank">Telegram</a>
-        <p>3. Оцените фин. блок: посмотрите, как фиксируются заявки, расходы, доход и графики.</p>
+
+      <p>1. Перейдите в тестовый дашборд: нажмите кнопку ниже и откройте.</p>
+      <a href="https://t.me/your_bot" class="cta" target="_blank">Дашборд</a>
+      <p>2. Перейдите в Telegram: нажмите кнопку ниже и откройте бота.</p>
+      <a href="https://t.me/your_bot" class="cta" target="_blank">Telegram</a>
+      <p>3. Оцените фин. блок: посмотрите, как фиксируются заявки, расходы, доход и графики.</p>
     </section>
 
     <!-- Услуги -->
